--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "solid-start dev",
     "build": "solid-start build",
     "start": "solid-start start",
-    "deploy": "VITE_BACKEND_URI=https://ec2-18-191-215-76.us-east-2.compute.amazonaws.com/ npm run build"
+    "deploy": "npm run build"
   },
   "type": "module",
   "devDependencies": {
